--- a/Lab_6_CRUD_operations/Views/Database/DeleteDepartment.cshtml
+++ b/Lab_6_CRUD_operations/Views/Database/DeleteDepartment.cshtml
@@ -3,22 +3,23 @@
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Department</h2>
-            <hr/>
+            <h2 class="text-primary">Delete Department</h2>
+            <hr />
         </div>
+        <input type="hidden" asp-for="DepartmentId" />
         <div class="mb-3">
             <label asp-for="DepartmentName"></label>
-            <input asp-for="DepartmentName" type="text" class="form-control" />
+            <input asp-for="DepartmentName" type="text" disabled class="form-control" />
         </div>
         <div class="mb-3">
             <label asp-for="StoreId"></label>
-            <input asp-for="StoreId" type="text" class="form-control" />
+            <input asp-for="StoreId" type="text" disabled class="form-control" />
         </div>
         <div class="mb-3">
             <label asp-for="DirectorId"></label>
-            <input asp-for="DirectorId" type="text" class="form-control" />
+            <input asp-for="DirectorId" type="text" disabled class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary" style="width: 150px">Create</button>
+        <button type="submit" class="btn btn-danger" style="width: 150px">Delete</button>
         <a asp-controller="Database" asp-action="department" class="btn btn-secondary" style="width: 150px">
             Back To List
         </a>
