--- a/Lab_6_CRUD_operations/Views/Database/shop.cshtml
+++ b/Lab_6_CRUD_operations/Views/Database/shop.cshtml
@@ -9,6 +9,7 @@
             <th class="py-3" scope="col">Номер_магазина</th>
             <th class="py-3"  scope="col">Адрес</th>
             <th class="py-3" scope="col">Табельный_номер_директора</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -18,9 +19,16 @@
                 <td class="py-3">@item.StoreId</td>
                 <td class="py-3">@item.StoreName</td>
                 <td class="py-3">@item.Specialization</td>
+                <td class="py-3">@item.Specialization</td>
                 <td class="py-3">@item.INN</td>
                 <td class="py-3">@item.Address</td>
                 <td class="py-3">@item.DirectorId</td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Database" asp-action="EditShop" asp-route-id="@item.StoreId" class="btn btn-warning mx-3">Edit</a>
+                        <a asp-controller="Database" asp-action="DeleteShop" asp-route-id="@item.StoreId" class="btn btn-danger">Delete</a>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
