--- a/Lab_6_CRUD_operations/Views/Shared/_Layout.cshtml
+++ b/Lab_6_CRUD_operations/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="department">Отдел</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Сотрудник</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="employee">Сотрудник</a>
                         </li>
                         <li class="nav-item px-3 ">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Товар</a>
