--- a/Lab_6_CRUD_operations/Views/Department/DeleteDepartment.cshtml
+++ b/Lab_6_CRUD_operations/Views/Department/DeleteDepartment.cshtml
@@ -20,7 +20,7 @@
             <input asp-for="DirectorId" type="text" disabled class="form-control" />
         </div>
         <button type="submit" class="btn btn-danger" style="width: 150px">Delete</button>
-        <a asp-controller="Database" asp-action="department" class="btn btn-secondary" style="width: 150px">
+        <a asp-controller="Department" asp-action="department" class="btn btn-secondary" style="width: 150px">
             Back To List
         </a>
     </div>
