--- a/Lab_6_CRUD_operations/Views/Employee/DeleteEmployee.cshtml
+++ b/Lab_6_CRUD_operations/Views/Employee/DeleteEmployee.cshtml
@@ -36,7 +36,7 @@
             <input asp-for="DepartmentId" type="text" class="form-control" />
         </div>
         <button type="submit" class="btn btn-danger" style="width: 150px">Delete</button>
-        <a asp-controller="Database" asp-action="shop" class="btn btn-secondary" style="width: 150px">
+        <a asp-controller="Employee" asp-action="employee" class="btn btn-secondary" style="width: 150px">
             Back To List
         </a>
     </div>
