--- a/Lab_6_CRUD_operations/Views/Shared/_Layout.cshtml
+++ b/Lab_6_CRUD_operations/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item px-3">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="shop">Магазин</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="shop">Магазин</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="department">Отдел</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="department">Отдел</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Database" asp-action="employee">Сотрудник</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="employee">Сотрудник</a>
                         </li>
                         <li class="nav-item px-3 ">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Товар</a>
