--- a/Lab_6_CRUD_operations/Views/Store/shop.cshtml
+++ b/Lab_6_CRUD_operations/Views/Store/shop.cshtml
@@ -19,14 +19,13 @@
                 <td class="py-3">@item.StoreId</td>
                 <td class="py-3">@item.StoreName</td>
                 <td class="py-3">@item.Specialization</td>
-                <td class="py-3">@item.Specialization</td>
                 <td class="py-3">@item.INN</td>
                 <td class="py-3">@item.Address</td>
                 <td class="py-3">@item.DirectorId</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Database" asp-action="EditShop" asp-route-id="@item.StoreId" class="btn btn-warning mx-3">Edit</a>
-                        <a asp-controller="Database" asp-action="DeleteShop" asp-route-id="@item.StoreId" class="btn btn-danger">Delete</a>
+                        <a asp-controller="Store" asp-action="EditShop" asp-route-id="@item.StoreId" class="btn btn-warning mx-3">Edit</a>
+                        <a asp-controller="Store" asp-action="DeleteShop" asp-route-id="@item.StoreId" class="btn btn-danger">Delete</a>
                     </div>
                 </td>
             </tr>
@@ -37,7 +36,7 @@
 <div class="container">
     <div class="row">
         <div class="col-2 d-flex justify-content-center" style="background-color: #202224;">
-            <a asp-controller="Database" asp-action="CreateShop">
+            <a asp-controller="Store" asp-action="CreateShop">
                 <p class="text-white fst-normal my-3">CREATE</p>
             </a>
         </div>
