--- a/Lab_6_CRUD_operations/Views/Store/DeleteShop.cshtml
+++ b/Lab_6_CRUD_operations/Views/Store/DeleteShop.cshtml
@@ -28,7 +28,7 @@
             <input asp-for="DirectorId" type="text" disabled class="form-control" />
         </div>
         <button type="submit" class="btn btn-danger" style="width: 150px">Delete</button>
-        <a asp-controller="Database" asp-action="shop" class="btn btn-secondary" style="width: 150px">
+        <a asp-controller="Store" asp-action="shop" class="btn btn-secondary" style="width: 150px">
             Back To List
         </a>
     </div>
